Object's viewport visibility setting gets ignored when its collection is instanced #61287

Closed
opened 2019-02-07 17:00:57 +01:00 by Sebastian Koenig · 9 comments

System Information
Operating system: elementaryOS 0.4.1
Graphics card: GTX 1080

Blender Version
Broken: 2.80 f3c7f44f91
Worked: 2.79

Short description of error
If you set an object inside a collection to be hidden and create an instance of that collection, that hidden object is now visible in the collection instance. The render visibility however does work (with F12).

Exact steps for others to reproduce the error
Open this file: instance_visibility.blend
The blue outline indicates where the hidden Suzanne is. To the right is the collection instance, where you can see the object. Toggeling the hide button (even with Alt) does not change the visibilty of the instanced suzanne.

**System Information** Operating system: elementaryOS 0.4.1 Graphics card: GTX 1080 **Blender Version** Broken: 2.80 f3c7f44f912b Worked: 2.79 **Short description of error** If you set an object inside a collection to be hidden and create an instance of that collection, that hidden object is now visible in the collection instance. The render visibility however does work (with F12). **Exact steps for others to reproduce the error** Open this file: [instance_visibility.blend](https://archive.blender.org/developer/F6539948/instance_visibility.blend) The blue outline indicates where the hidden Suzanne is. To the right is the collection instance, where you can see the object. Toggeling the hide button (even with Alt) does not change the visibilty of the instanced suzanne.
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Dalai Felinto was assigned by Sebastian Koenig 2019-02-07 17:01:22 +01:00

Click with Alt should indeed hide the instanced object. Looking at it.

Click with Alt should indeed hide the instanced object. Looking at it.

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey I'm looking at this, but the issue seems to be related to depsgraph in a way. I guess the issue is that we need to do view_layer_remove_disabled_bases() for instanced collections as well.

@Sergey I'm looking at this, but the issue seems to be related to depsgraph in a way. I guess the issue is that we need to do view_layer_remove_disabled_bases() for instanced collections as well.

@dfelinto, that or ignore those in the iterator i would guess.

@dfelinto, that or ignore those in the iterator i would guess.

Added subscriber: @brecht

Added subscriber: @brecht

An alternative (and perhaps correct) fix seems to be to call BKE_collection_object_cache_free for any collection owning an object that has its disable state changed. Or simply BKE_collection_object_cache_free() for all collections whenever we tag relations to rebuild in depsgraph. cc @brecht

An alternative (and perhaps correct) fix seems to be to call `BKE_collection_object_cache_free` for any collection owning an object that has its disable state changed. Or simply `BKE_collection_object_cache_free() for all collections` whenever we tag relations to rebuild in depsgraph. cc @brecht

This issue was referenced by 02581a7ef8

This issue was referenced by 02581a7ef819bfd388420114280ab4a83f155eaf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61287
No description provided.